2010-08-02  Murray Cumming  <murrayc@murrayc.com>

	Wrapped some new functions.

	* configure.ac: Depend on atkmm, so we can use Atk::Object in the API.
	(This could be optional at configure time if anybody needs that, as it is 
	in gtkmm.)
	* clutter/src/clutter_methods.defs: Regenerated with h2defs.py.
	* clutter/src/filelist.am:
	* clutter/src/actor-meta.[hg|ccg]:
	* clutter/src/action.[hg|ccg]: Added new ActorMeta and Action classes.
	* clutter/src/action.[hg|ccg]: Added get/set_clip_to_allocation(), contains(), 
	get_has_allocation(), get_accessible(), add_action(), remove_action(), 
	get_action(), clear_actions().
	* clutter/src/animation.hg: set_duration(): Correct the parameter type to 
	guint, as corrected in the C API.
	* clutter/src/path.hg: Added foreach().
	* clutter/src/stage.hg: Addef get/set_no_clear_hint().
	* clutter/src/texture.hg: Added get/set_pick_with_alpha().

0.9.6:

2010-05-05  Murray Cumming  <murrayc@murrayc-x61>

	Documentation improvement.

	* clutter/cluttermm.pc.in: Correct htmlrefpub so clutter-gtkmm's documentation
	can link to the library.gnome.org cluttermm documentation.
	* clutter/src/stage.hg: Added class documentation based on the C docs.

2010-05-05  Murray Cumming  <murrayc@murrayc.com>

	Small API additions.
	
	* clutter/src/stage.hg: Added delete_event signal.
	* clutter/src/text.hg: Added font_description property.

2010-05-05  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Main page improvements.

	* clutter/cluttermm.h: Improve the text slightly and link to Stage, Actor,
    and the cluttermm tutorial.

2010-04-27  David King  <davidk@openismus.com>

	Add main page to Doxygen documentation

	* doc/Makefile.am: Parse clutter/cluttermm.h for documentation.
	* clutter/cluttermm.h: Add main page to Doxygen documentation.

2010-04-19  Murray Cumming  <murrayc@murrayc.com>

	Actor, Animation: Updated signals and propeties for clutter 1.2.

	* clutter/src/actor.hg: Added new signals and new properties, correcting