@@ -22,6 +22,7 @@
 #include <cluttermm/action.h>
 #include <cluttermm/animation.h>
 #include <cluttermm/color.h>
+#include <cluttermm/effect.h>
 #include <cluttermm/scriptable.h>
 #include <cluttermm/shader.h>
 #include <cluttermm/types.h> // For Event*
@@ -279,6 +280,19 @@ public:
   
 //TODO:   _WRAP_METHOD(GLis* get_actions(), clutter_actor_get_actions)
   _WRAP_METHOD(void clear_actions(), clutter_actor_clear_actions)
+  
+
+  _WRAP_METHOD(void add_effect(const Glib::RefPtr<Effect>& effect), clutter_actor_add_effect)
+  _WRAP_METHOD(void add_effect_with_name(const Glib::ustring& name,
+                                                    const Glib::RefPtr<Effect>& effect), clutter_actor_add_effect_with_name)
+  _WRAP_METHOD(void remove_effect(const Glib::RefPtr<Effect>& effect), clutter_actor_remove_effect)
+  _WRAP_METHOD(void remove_effect(const Glib::ustring& name), clutter_actor_remove_effect_by_name )
+  //TODO: GList *        clutter_actor_get_effects           (ClutterActor  *self);
+  _WRAP_METHOD(Glib::RefPtr<Effect> get_effect(const Glib::ustring& name), clutter_actor_get_effect, refreturn)
+  _WRAP_METHOD(Glib::RefPtr<const Effect> get_effect(const Glib::ustring& name) const, clutter_actor_get_effect, refreturn, constversion)
+  _WRAP_METHOD(void clear_effects(), clutter_actor_clear_effects)
+
+
 
 // signals
   _WRAP_SIGNAL(bool button_press_event(ButtonEvent* event), "button_press_event")
