@@ -44,6 +44,7 @@ int main(int argc, char** argv)
     << get_defs(CLUTTER_TYPE_CLONE)
     << get_defs(CLUTTER_TYPE_COLOR)
     << get_defs(CLUTTER_TYPE_CONTAINER)
+    << get_defs(CLUTTER_TYPE_EFFECT)
     << get_defs(CLUTTER_TYPE_EVENT)
 //    << get_defs(CLUTTER_TYPE_FIXED)
     << get_defs(CLUTTER_TYPE_GROUP)
